@@ -22,6 +22,8 @@ version 2.3.0:
 	  could lead to crashes.
 	* It's possible to bind key-strokes to specific menuitems in the windows.
 	  Read the 'Menus' section in the man-page for details.
+	* 'transpose-chars' operation for the entry boxes. The default key-binding
+	  is ctrl+t.
 
 version 2.2.2:
 	http://developer.pidgin.im/query?status=closed&milestone=2.2.2
